2004-08-09  Brian Kahne  <bkahne@ibmoto.com>

	* Added the lemon parser generator.  The source can be obtained
	from here:  

		http://www.hwaci.com/sw/lemon/

	A tutorial can be obtained from here:

		http://sourceforge.net/project/showfiles.php?group_id=79320&package_id=124528

	* Added a parsing class, which wraps a lemon parser.
	Proof-of-concept lemon parser created which just parses simple
	mathematical expressions.  It runs in its own thread and gets
	tokens from the tokenizer thread.

	* Implemented the tokenizer stage for the compiler.
	
	* Started on an example multithreaded C compiler.  The basic
	architecture will be:

	1.  Tokenizer implemented using flex.  This passes tokens via a
	channel to the parser.

	2.  Parser implemented with lemon.  This creates an AST and a
	symbol-table.  When a function has been completed, a
	code-generator thread will be dispatched.

	3.  Code generator implemented by copying mini-C (a sample Python
	C compiler).

	4.  The top-level tree will be traversed and code will be written
	out.  This will be the synchronization point, where we'll wait for
	threads to finish.

2004-08-05  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed ecu- problem was with cylinders() having a lower priority
	than baseload(), so that it never got a chance to start up the
	cylinder managers.  Added regression to test operation.

2004-08-05  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed a bug with priorities:  The wake function would always
	wake up a thread, even if its processor was busy.  The new
	behavior is:  If a thread is awakened whose priority is higher
	than the busy thread, the busy thread will re-compute, just as
	delay was handled.  If the awakened thread is lower priority, it
	will be added to the ready queue but the processor will stay busy.

	Added pri7 and pri8 to test this.

	* Checked in ecu code.  Still need to do some debugging.

        ======= plasma release 0.3.0 (v0_3_0) on Linux (cde-tx32-ldt189) =======
