@@ -10,14 +10,25 @@ struct Tokens;
 
 // Wrapper class.  The copy-constructor is shallow
 // and there is no destructor b/c allocation is garbage collected.
-class CParser : public gc {
+class CParser {
 public:
   CParser();
   CParser(const CParser &cp) : _parser(cp._parser) {}
 
-  void parse(int t,Tokens tk);
+  void parse(int t,Tokens *tk);
+
+  int linenumber() const { return _linenumber; };
+  const char *filename() const { return _filename; };
+
+  void reset();
+  void seterror() { _error = true; };
+  bool error() const { return _error; };
 private:
   void *_parser;  // The parser (opaque type generated by Lemon).
+
+  const char *_filename;
+  int         _linenumber;
+  bool        _error;
 };
 
 #endif
